# spool

./: CMakeLists.txt  LICENSE  README.md
cmake/: Spool.cmake
public/: CMakeLists.txt  spool.h
spooler/: CMakeLists.txt  Database.cpp  Database.hpp  Generator.cpp  Generator.hpp  Main.cpp  Origins.cpp  Origins.hpp  Parser.cpp  Parser.hpp  Statement.cpp  Statement.hpp  Strings.cpp  Strings.hpp
sql/: spool.sql
test/: CMakeLists.txt  Main.cpp  TU1.cpp  Test.hpp  lib1.cpp  main.cpp  test1.cpp  test2.cpp
test/lib1/: TU1.cpp
test/lib2/: TU1.cpp
